Close botton no longer overlapping title in stats box

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -3,6 +3,7 @@ html {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  margin: 0;
 }
 
 /*Landing Page*/
@@ -145,7 +146,7 @@ html {
   flex: 50%;
 }*/
 
-h2 {
+.questionHeading {
   color: #001f54;
   font-family: "Tenor Sans", sans-serif;
   font-size: 25px;
